--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundamentos Javascript</title>
+    <style>
+        body {
+            margin:0;
+            padding:0;
+            display:grid;
+            width:100vw;
+            height:100vh;
+            place-items:center;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+        div{
+            width:300px;
+            height:300px;
+            border-radius:50%;
+            border: 2px solid rgb(247, 6, 6);
+            background-color: yellow;
+            display:grid;
+            place-items:center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Fundamentos Javascript</h1>
+    <div>
+        <h1>Bola magica</h1>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
