--- a/scisorrs.html
+++ b/scisorrs.html
@@ -75,6 +75,24 @@
         button:hover {
             background-color: #a8099e;
         }
+
+        /* Estilo del botón de regresar */
+        a.button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            padding: 10px 20px;
+            background-color: #ff24c8;
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        a.button:hover {
+            background-color: #a8099e;
+        }
     </style>
 </head>
 <body>
@@ -99,5 +117,6 @@
         <div class="result" id="result"></div>
     </div>
     <script src="scissors.js"></script>
+    <a href="./index.html" class="button">Regresar</a>
 </body>
 </html>
