--- a/bal.html
+++ b/bal.html
@@ -6,6 +6,7 @@
     <title>Fundamentos Javascript</title>
     <style>
         body {
+            background-color: #24ffab;
             margin: 0;
             padding: 0;
             display: grid;
