--- a/scisorrs.html
+++ b/scisorrs.html
@@ -49,6 +49,7 @@
             width: 60px;
             height: 60px;
             margin-bottom: 10px;
+            display: none; /* Ocultar las imágenes inicialmente */
         }
         .results {
             display: flex;
